# FactorioModRecipePlanner

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  analyzer.cpp  analyzer.hpp  codecov.yml  main.cpp
cmake/: find_compiler.cmake
src/: analyzer.cpp  analyzer.hpp  main.cpp
travis-scripts/: build.sh  dependencies.sh
